--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>STUDIO GHIBLI</h1>
+<header>
+  <img class='logo' src='assets/images/logo-t.png' alt='logo'>
+</header>
+
+<app-movies-showcase></app-movies-showcase>
